--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Books</h1>
+<% @books.each do |book| %>
+<p>Title</p>
+<span><%= list.title %></span>
+<p>Body</p>
+<span><%= list.body %></span>
+
+<% end %>
