--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Editing Book</h1>
 
-<%= form_with model:book, local: true do |f| %>
+<%= form_with model:@book, local: true do |f| %>
 <h4>Tittle</h4>
 <%= f.text_field :title %>
 <h4>Body</h4>
 <%= f.text_field :body %>
-<%= f.submit 'Create Book'
+<%= f.submit 'Create Book' %>
 
 <% end %>
