--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,22 @@
 <h1>Books</h1>
-<% @books.each do |book| %>
-<p>Title</p>
-<span><%= list.title %></span>
-<p>Body</p>
-<span><%= list.body %></span>
+
+<table>
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Body</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+             <% @books.each do |book| %>
+
+        </tr>
+    </tbody>
+</table>
+
+
+
+
 
 <% end %>
