--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,35 @@
 <h1>Books</h1>
 
 <table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Body</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-             <% @books.each do |book| %>
+<thead>
+    <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+    </tr>
+</thead>
 
-        </tr>
-    </tbody>
+<tbody>
+    <% @books.each do |book| %>
+    <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td>
+            <%= link_to "Show", book_path(book.id) %>
+            <%= link_to "Edit", book_path(book.id) %>
+            <%= link_to "Destroy", book_path(book.id), method: :delete, "data-conform" => "Are you sure?" %>
+        </td>
+    </tr>
+    <% end %>
+</tbody>
 </table>
 
+<h2>New book</h2>
+<%= form_with model: @book, url:'/books', local:true do |f| %>
 
-
-
-
+<h4>Title</h4>
+<%= f.text_field :title %>
+<h4>Body</h4>
+<%= f.text_area :body %>
+<br><%= f.submit 'Create Book' %><br>
 <% end %>
