--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,6 +5,6 @@
 <%= f.text_field :title %>
 <h4>Body</h4>
 <%= f.text_field :body %>
-<%= f.submit 'Create Book' %>
+<br><%= f.submit 'Create Book' %><br>
 
 <% end %>
