--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,9 +1,16 @@
 <h2>New book</h2>
+<% if @list.errors.any? %>
+  <%= @list.errors.count %>件のエラーが発生しました
+  <% @list.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 
 <%= form_with model: @book, url:'/books', local:true do |f| %>
 <h4>Title</h4>
 <%= f.text_field :title %>
 <h4>Body</h4>
 <%= f.text_area :body %>
-<%= f.submit 'Create Book' %>
+<br><%= f.submit 'Create Book' %></br>
 <% end %>
