--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,16 @@
-<h4 class="book-title">
-  <%= @book.title %>
-</h4>
+<header>
+  <h1 class="heading">
+    <%= link_to "Books", book_path %>
+  </h1>
+</header>
 
-<h4 class="book-body">
-  <%= @book.body %>
-</h4>
 
-<%= link_to "Edit", edit_book_path(@book) %>
-<%= link_to "destroy", book_path(@book), method: :delete %>
+<h4 class="book-title"></h4>
+<p>><%= @book.title %></p>
+
+
+<h4 class="book-body"></h4>
+<p><%= @book.body %></p>
+
+<%= link_to "Edit", edit_book_path(@book.id) %>
+<%= link_to "destroy", destroy_book_path(@book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
