--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,27 @@
-<h1>ようこそBookersへ！</h1>
-<h3>Bookersでは、さまざまな書籍に関するあなたの意見や<br />
-印象を共有し交換することができます
-</h3>
+<!DOCTYPE>
+<html>
+    <head>
+        <title>WebcampBackendNew</title>
+        <meta charaset="UTF-8"
+    </head>
+    <body>
+        <h1>
+            ようこそ
+            <strong>Bookers</strong>
+            へ！
+            </h1>
+            
+    <p>
+    <strong>Bookers</strong>
+    では、さまざまな書籍に関するあなたの意見や
+    </p>
+    <p>
+      印象を共有し交換することができます
+    </p>
+    
+    <p>
+        <a href="/books">start</a>
+    </p>
+
+    </body>
+</html>
