--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,6 +5,12 @@
 <%= f.text_field :title %>
 <h4>Body</h4>
 <%= f.text_field :body %>
-<br><%= f.submit 'Create Book' %><br>
+
+<br><%= f.submit 'Update Book' %></br>
 
 <% end %>
+
+
+<%= link_to "Show", book_path(@book.id) %>
+|
+<%= link_to "Back", :back %>
