--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,6 +24,8 @@
 </tbody>
 </table>
 
+
+
 <h2>New book</h2>
 <%= form_with model: @book, url:'/books', local:true do |f| %>
 
@@ -31,5 +33,5 @@
 <%= f.text_field :title %>
 <h4>Body</h4>
 <%= f.text_area :body %>
-<br><%= f.submit 'Create Book' %><br>
+<br><%= f.submit 'Create Book' %>
 <% end %>
