--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,9 +1,15 @@
 <h2>New book</h2>
-<% if @list.errors.any? %>
-  <%= @list.errors.count %>件のエラーが発生しました
-  <% @list.errors.full_messages.each do |message| %>
-    <%= message %>
-  <% end %>
+
+<% if @book.errors.any? %>
+<div id="error_explanation">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+    </ul>
+
+</div>
 <% end %>
 
 
