--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,8 +16,8 @@
         <td><%= book.body %></td>
         <td>
             <%= link_to "Show", book_path(book.id) %>
-            <%= link_to "Edit", book_path(book.id) %>
-            <%= link_to "Destroy", book_path(book.id), method: :delete, "data-conform" => "Are you sure?" %>
+            <%= link_to "Edit", edit_book_path(book.id) %>
+            <%= link_to "Destroy", book_path(book.id), method: :delete, data: {confirm:"Are you sure?"} %>
         </td>
     </tr>
     <% end %>
@@ -28,6 +28,18 @@
 
 <h2>New book</h2>
 <%= form_with model: @book, url:'/books', local:true do |f| %>
+
+<% if @book.errors.any? %>
+<div id="error_explanation">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+    </ul>
+
+</div>
+<% end %>
 
 <h4>Title</h4>
 <%= f.text_field :title %>
