--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,25 @@
+<% if flash[:notice] %>
+<p id="notice">
+  <%= flash[:notice] %>
+</p>
+<% end %>
+
 <h1>Editing Book</h1>
 
 <%= form_with model:@book, local: true do |f| %>
+
+<% if @book.errors.any? %>
+<div id="error_explanation">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+    </ul>
+
+</div>
+<% end %>
+
 <h4>Tittle</h4>
 <%= f.text_field :title %>
 <h4>Body</h4>
