--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice] %>
+<p id="notice">
+  <%= flash[:notice] %>
+</p>
+<% end %>
+
 <h1>Books</h1>
 
 <table>
@@ -5,7 +11,7 @@
     <tr>
         <th>Title</th>
         <th>Body</th>
-        <th colspan="3"></th>
+        <th></th>
     </tr>
 </thead>
 
