--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,16 @@
 <h2>New book</h2>
 
+<% if @book.errors.any? %>
+<div id="error_explanation">
+    <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+    <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+    </ul>
 
+</div>
+<% end %>
 
 
 <%= form_with model:@book, url:'/books', local:true do |f| %>
